Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,12 @@ steps:
     command: 'install'
     workingDir: 'SecretSanta/src/SecretSanta.Web'
 
+- task: Npm@1
+  inputs:
+    command: 'custom'
+    workingDir: 'SecretSanta/src/SecretSanta.Web'
+    customCommand: 'run build:prod'
+
 - task: NuGetToolInstaller@1
 
 - task: NuGetCommand@2
